(feat): entity by org and emp num route and swagger additions
